Adición etiqueta meta Gooble Search

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <!-- 1. Metaetiquetas esenciales para SEO y adaptabilidad -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Etiqueta meta de Google Search Console -->
+    <meta name="google-site-verification" content="NNsJssm0ksLKCExDCyUpghwrYNsh4wyQI21A4B9pw7E" />
     <meta name="description"
         content="Portafolio profesional de Francisco. Analista de sistemas y desarrollador de software con más de 25 años de experiencia.">
     <meta name="keywords"
