Agregar curso desarrolador con IA

--- a/index.html
+++ b/index.html
@@ -814,11 +814,11 @@
                                                         rel="noopener noreferrer">Coremsa formación</a></h3>
                                                 <h5 class="text-section-content mt-2">CREACIÓN Y GESTIÓN DE REPOSITORIOS
                                                     DE CONTENIDOS</h5>
-                                                <p class="card-text text-muted">200 horas (estimado)</p>
+                                                <p class="card-text text-muted">200 horas</p>
                                             </div>
                                             <div class="d-flex justify-content-between align-items-center mt-3">
                                                 <button class="btn btn-primary btn-sm flip-btn">Contenido</button>
-                                                <p class="card-text text-muted text-end mb-0">Abr 2025 - Actual</p>
+                                                <p class="card-text text-muted text-end mb-0">Abr 2025 - Oct 2025</p>
                                             </div>
                                         </div>
                                     </div>
@@ -1069,7 +1069,7 @@
                                             </div>
                                             <div class="d-flex justify-content-between align-items-center mt-3">
                                                 <button class="btn btn-primary btn-sm flip-btn">Contenido</button>
-                                                <p class="card-text text-muted text-end mb-0">Jul 2025 - Actual</p>
+                                                <p class="card-text text-muted text-end mb-0">Jul 2025 - Oct 2025</p>
                                             </div>
                                         </div>
                                     </div>
@@ -1124,11 +1124,11 @@
                                                         href="https://indiceformacion.com/" target="_blank"
                                                         rel="noopener noreferrer">Indice ICF Consultoría & Formación</a></h3>
                                                 <h5 class="text-section-content mt-2">INTRODUCCIÓN AL BIG DATA E INTELIGENCIA ARTIFICIAL</h5>
-                                                <p class="card-text text-muted">60 horas</p>
+                                                <p class="card-text text-muted">40 horas</p>
                                             </div>
                                             <div class="d-flex justify-content-between align-items-center mt-3">
                                                 <button class="btn btn-primary btn-sm flip-btn">Contenido</button>
-                                                <p class="card-text text-muted text-end mb-0">Sep 2025 - Actual</p>
+                                                <p class="card-text text-muted text-end mb-0">Sep 2025 - Oct 2025</p>
                                             </div>
                                         </div>
                                     </div>
@@ -1141,33 +1141,33 @@
                                             <li>Cómo evoluciona el BI tradicional al Big Data.</li>
                                             <li>El Big Data como solución al tratamiento masivo de datos.</li>
                                             <li>Hadoop como revolución para el tratamiento paralelo de datos masivo.</li>
-                                            <li>Característica del Big Data.</li>
-                                            <li>Nuevos paradigmas del Big Data.</li>
+                                            <li>Características del Big Data (4 vs y más): volumetría, velocidad, variedad (estructurados/no estructurados), veracidad (calidad del dato), valor del dato.</li>
+                                            <li>Nuevos paradigmas del Big Data: procesos en Real Time y Cloud Computing.</li>
                                         </ul>
                                         <li>Unidad 2. Conocimiento de nociones básica sobre Arquitectura Big Data y principales tecnologías.</li>
                                         <ul>
-                                            <li>El Ecosistema Hadoop.</li>
-                                            <li>Principales lenguajes de programación utilizados.</li>
-                                            <li>Procesos ETL.</li>
-                                            <li>Procesos Real Time y bases de datos de alta disponibilidad.</li>
+                                            <li>El ecosistema Hadoop: HDFS y MapReduce.</li>
+                                            <li>Principales lenguajes de programación utilizados: Java, Scala, SQL y Python.</li>
+                                            <li>Procesos ETL (extracción, transformación y carga): Flume, Sqoop y HIVE.</li>
+                                            <li>Procesos real time y bases de datos de alta disponibilidad: Kafka, HBASE y Redis.</li>
                                             <li>Procesamiento y analítica avanzada con Spark.</li>
                                             <li>Seguridad y gobierno de dato.</li>
                                         </ul>
                                         <li>Unidad 3. Compresión de los principales conceptos sobre la "Ciencia de Datos" e IA.</li>
                                         <ul>
                                             <li>Introducción a la "Ciencia de datos" y la Inteligencia Artificial.</li>
-                                            <li>Principales lenguajes de programación utilizados.</li>
-                                            <li>Algoritmos supervisados.</li>
-                                            <li>Algoritmos no supervisados.</li>
+                                            <li>Principales lenguajes de programación utilizados: R y Python.</li>
+                                            <li>Algoritmos supervisados: ¿qué son? Algunos ejemplos.</li>
+                                            <li>Algoritmos no-supervisados: ¿qué son? Algunos ejemplos.</li>
                                             <li>Introducción al Deep Learning y el aprendizaje por refuerzo.</li>
-                                            <li>Procesamiento de información no estructura.</li>
-                                            <li>Visualización de datos.</li>
+                                            <li>Procesamiento de información no estructurada: imágenes y textos.</li>
+                                            <li>Visualización de datos: Visualizaciones interactivas y Dashboards.</li>
                                         </ul>
                                         <li>Tema 4. Adquisición de una visión transversal sobre el futuro del Big Data y cómo se aplica actualmente en diferentes áreas.</li>
                                         <ul>
-                                            <li>Ejemplos en las instituciones públicas.</li>
-                                            <li>Ejemplos en el mundo Empresarial.</li>
-                                            <li>Big Data para el bien social.</li>
+                                            <li>Ejemplos en las instituciones públicas: OpenData.</li>
+                                            <li>Ejemplos en el mundo empresarial: ejemplos de aplicabilidad del Big Data a la eficiencia de las operaciones de una compañía.</li>
+                                            <li>Data for Good: big data para el bien social.</li>
                                             <li>Reflexiones finales sobre el impacto del Big Data en los años venideros.</li>
                                         </ul>
                                     </ul>
@@ -1304,7 +1304,7 @@
                                             </div>
                                             <div class="d-flex justify-content-between align-items-center mt-3">
                                                 <button class="btn btn-primary btn-sm flip-btn">Contenido</button>
-                                                <p class="card-text text-muted text-end mb-0">Sep 2025 - Actual</p>
+                                                <p class="card-text text-muted text-end mb-0">Sep 2025 - Oct 2025</p>
                                             </div>
                                         </div>
                                     </div>
@@ -1330,6 +1330,109 @@
                                             <li>Creación de Consultas de selección sencilla.</li>
                                             <li>Creación de Consultas de tabla de referencias cruzadas.</li>
                                             <li>Creación de Consultas con parametros.</li>
+                                        </ul>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Curso Open Day. -->
+                    <div class="col-md-4 mb-4">
+                        <div class="flip-card">
+                            <div class="flip-card-inner">
+                                <div class="flip-card-front">
+                                    <div class="card card-competencias h-100">
+                                        <div class="card-body d-flex flex-column justify-content-between">
+                                            <div>
+                                                <h3 class="text-section-header card-title"><a
+                                                        href="https://cas-training.com/" target="_blank"
+                                                        rel="noopener noreferrer">CAS Training. AWS</a></h3>
+                                                <h5 class="text-section-content mt-2">CONCEPTOS BÁSICOS DE MACHINE LEARNING</h5>
+                                                <p class="card-text text-muted">OpenDays</p>
+                                            </div>
+                                            <div class="d-flex justify-content-between align-items-center mt-3">
+                                                <button class="btn btn-primary btn-sm flip-btn">Contenido</button>
+                                                <p class="card-text text-muted text-end mb-0">Sep 2025</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="flip-card-back">
+                                    <h5 class="card-title text-center text-primary">Contenido del Curso</h5>
+                                    <ul>
+                                        <li></li>
+                                        <ul>
+                                        </ul>
+                                        <li></li>
+                                        <ul>
+                                        </ul>
+                                        <li></li>
+                                        <ul>
+                                        </ul>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Curso Desarrollo con IA. -->
+                    <div class="col-md-4 mb-4">
+                        <div class="flip-card">
+                            <div class="flip-card-inner">
+                                <div class="flip-card-front">
+                                    <div class="card card-competencias h-100">
+                                        <div class="card-body d-flex flex-column justify-content-between">
+                                            <div>
+                                                <h3 class="text-section-header card-title"><a
+                                                        href="https://thebigschool.com/" target="_blank"
+                                                        rel="noopener noreferrer">BIG school</a></h3>
+                                                <h5 class="text-section-content mt-2">DESARROLLO CON IA</h5>
+                                                <p class="card-text text-muted">6 horas</p>
+                                            </div>
+                                            <div class="d-flex justify-content-between align-items-center mt-3">
+                                                <button class="btn btn-primary btn-sm flip-btn">Contenido</button>
+                                                <p class="card-text text-muted text-end mb-0">Oct 2025</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="flip-card-back">
+                                    <h5 class="card-title text-center text-primary">Contenido del Curso</h5>
+                                    <ul>
+                                        <li>Aprendizaje Acelerado con IA</li>
+                                        <ul>
+                                            <li>NotebookLM de Google</li>
+                                        </ul>
+                                        <li>Domina la Ingenieria de prompts para devs</li>
+                                        <ul>
+                                            <li>Analisis de un respositorio de GitHub</li>
+                                        </ul>
+                                        <li>Convierte un boceto en una web lista para producción</li>
+                                        <ul>
+                                            <li>Firebase Studio</li>
+                                        </ul>
+                                        <li>Documentación y requisitos potenciados con IA</li>
+                                        <ul>
+                                            <li>Fases del proceso potenciado con IA</li>
+                                        </ul>
+                                        <li>Cómo enseñar a la IA a entender tu proyecto</li>
+                                        <ul>
+                                            <li>Repositorio privado con IA</li>
+                                        </ul>
+                                        <li>Integración avanzada de herramientas</li>
+                                        <ul>
+                                            <li>Herramientas de IA en el flujo de trabajo</li>
+                                        </ul>
+                                        <li>Seguridad y Auditoría</li>
+                                        <ul>
+                                            <li>Herramientas de IA para seguridad</li>
+                                        </ul>
+                                        <li>Automatización con IA para Desarrolladores</li>
+                                        <ul>
+                                            <li>Qué es n8n</li>
+                                            <li>Los Bloques de Construcción:Nodos, Triggers y Workflows</li>
+                                            <li>Web Scraping con IA</li>
                                         </ul>
                                     </ul>
                                 </div>
@@ -2195,7 +2298,7 @@ Comparación: 2 ( 3 / 4 ) no es igual a 3 ( 1 / 2 )
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
                 </div>
                 <div class="modal-body">
-                    <img id="imagenModalBody" src="" class="img-fluid rounded" alt="Imagen en grande del proyecto">
+                    <img id="imagenModalBody" src="" class="img-fluid rounded" alt="proyecto">
                 </div>
             </div>
         </div>
@@ -2208,7 +2311,7 @@ Comparación: 2 ( 3 / 4 ) no es igual a 3 ( 1 / 2 )
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
                 </div>
                 <div class="modal-body p-0">
-                    <img id="modalImage" src="" class="img-fluid rounded" alt="Imagen ampliada del proyecto">
+                    <img id="modalImage" src="" class="img-fluid rounded" alt="proyecto">
                 </div>
             </div>
         </div>
