Actualiza curso POO

--- a/index.html
+++ b/index.html
@@ -1782,6 +1782,88 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- PROGRAMACIÓN DE APLICACIONES ORIENTADAS A OBJETOS. -->
+                    <div class="col-md-4 mb-4">
+                        <div class="flip-card">
+                            <div class="flip-card-inner">
+                                <div class="flip-card-front">
+                                    <div class="card card-competencias h-100">
+                                        <div class="card-body d-flex flex-column justify-content-between">
+                                            <div>
+                                                <h3 class="text-section-header card-title"><a
+                                                        href="https://www.fundae.es/" target="_blank"
+                                                        rel="noopener noreferrer">Fundación Estatal PARA LA FORMACIÓN EN EL EMPLEO</a></h3>
+                                                <h5 class="text-section-content mt-2">PROGRAMACIÓN DE APLICACIONES ORIENTADAS A OBJETOS</h5>
+                                                <p class="card-text text-muted">60 horas</p>
+                                            </div>
+                                            <div class="d-flex justify-content-between align-items-center mt-3">
+                                                <button class="btn btn-primary btn-sm flip-btn">Contenido</button>
+                                                <p class="card-text text-muted text-end mb-0">Oct 2025 Actual</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="flip-card-back">
+                                    <h5 class="card-title text-center text-primary">Contenido del Curso</h5>
+                                    <ul>
+                                        <li>1. CONCEPTOS BÁSICOS.</li>
+                                        <ul>
+                                            <li>Fundamentos. Expresiones. Entornos de funcionamiento.</li>
+                                            <li>Plataformas soportadas. Patrones.</li>
+                                            <li>Diagramas UML.  - Traducción de UML a código y viceversa.</li>
+                                            <li>Arquitectura. Uso de interfaces.</li>
+                                            <li>Paquetes y manejo de excepciones.</li>
+                                            <li>Manipulación de documentos XML.</li>
+                                            <li>Refactoring de código.</li>
+                                            <li>Versionado de Software.</li>
+                                            <li>El testing.</li>
+                                            <li>Las sentencias.</li>
+                                        </ul>
+                                        <li>2. PROGRAMACIÓN ESTRUCTURADA.</li>
+                                        <ul>
+                                            <li>Sintaxis.</li>
+                                            <li>Datos básicos.</li>
+                                            <li>Declaración de variables. Operadores.</li>
+                                            <li>Estructuras. Funciones y parámetros.</li>
+                                            <li>Arrays. Strings.</li>
+                                            <li>Buscar. Reemplazar. Extraer. Copiar.</li>
+                                        </ul>
+                                        <li>3. PROGRAMACIÓN ORIENTADA A OBJETOS.</li>
+                                        <ul>
+                                            <li>Filosofía.</li>
+                                            <li>Definición. Uso. Encapsulación. Abstracción.</li>
+                                            <li>Herencia. Polimorfismo. Diferencias.</li>
+                                            <li>Aplicaciones WEB. Aplicaciones autónomas. Applets. Servlets. Aplicaciones con ventanas.</li>
+                                            <li>Páginas dinámicas frente a páginas estáticas.</li>
+                                            <li>Modelo cliente-servidor. Controles básicos. Conversión.</li>
+                                        </ul>
+                                        <li>4. INDUSTRIA RELACIONADA: BASES DE DATOS RELACIONALES.</li>
+                                        <ul>
+                                            <li>Conceptos fundamentales.</li>
+                                            <li>Modelos de datos. El lenguaje de definición de datos (DDL): El lenguaje de manipulación de datos (DML).</li>
+                                            <li>Estrategias para el control de las transacciones y de la concurrencia. Características y comparación de los SGBD más habituales.</li>
+                                            <li>Herramientas. Importación y exportación de datos.</li>
+                                        </ul>
+                                        <li>5. PROGRAMACIÓN JAVA PARA DISPOSITIVOS MÓVILES.</li>
+                                        <ul>
+                                            <li>Android.</li>
+                                            <li>Librerías multimedia integradas.</li>
+                                            <li>Resolución de problemas comunes. Principales Frameworks.</li>
+                                            <li>Modelado de las relaciones de las tablas: Mapeo-objeto-relacional.</li>
+                                            <li>Creación de una plantilla. Desarrollo de la aplicación utilizando el patrón MVC. Internalización y localización.  Autentificación de usuarios  - Gestión de accesos por roles: autorización.</li>
+                                            <li>Integración de componentes ya desarrollados: gráficos estadísticos.  – Integración de AJAX para tareas habituales.</li>
+                                        </ul>
+                                        <li>6. GESTORES DE CONTENIDOS.</li>
+                                        <ul>
+                                            <li>Instalación, configuración, personalización. Plantillas. Módulos, componentes y plugings más utilizados.</li>
+                                            <li>Técnicas de SEO. Nociones de seguridad.</li>
+                                        </ul>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
